more cleanup; add .zshrc
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/home/Brewfile
+++ b/home/Brewfile
@@ -1,40 +1,69 @@
+tap 'caskroom/cask'
 tap 'homebrew/bundle'
 tap 'homebrew/core'
+tap 'homebrew/dupes'
 tap 'homebrew/versions'
+brew 'adns'
+brew 'android-platform-tools'
 brew 'autoconf'
-brew 'xz'
 brew 'automake'
+brew 'cmatrix'
+brew 'coreutils'
 brew 'libgpg-error'
 brew 'libassuan'
 brew 'libgcrypt'
 brew 'libksba'
 brew 'pth'
 brew 'dirmngr'
-brew 'libpng'
-brew 'freetype'
 brew 'lame'
-brew 'openssl'
-brew 'pkg-config'
+brew 'git'
 brew 'x264'
 brew 'xvid'
 brew 'ffmpeg'
+brew 'libpng'
+brew 'freetype'
+brew 'gettext'
 brew 'jpeg'
 brew 'libtiff'
 brew 'libtool'
+brew 'xz'
 brew 'imagemagick'
 brew 'gifify'
+brew 'gmp'
+brew 'libtasn1'
+brew 'nettle'
+brew 'gnutls'
+brew 'go'
+brew 'hub'
 brew 'libusb'
 brew 'libusb-compat'
-brew 'gnupg'
-brew 'pinentry'
-brew 'gpg-agent'
-brew 'readline'
-brew 'gnupg2'
-brew 'hub'
 brew 'libyaml'
+brew 'mas'
+brew 'openssl'
+brew 'mongodb'
+brew 'npth'
+brew 'phantomjs'
+brew 'pinentry'
 brew 'pinentry-mac'
+brew 'pkg-config'
+brew 'readline'
 brew 'thefuck'
-cask '==> Tapping caskroom/cask'
-cask 'Tapped 0 formulae (3,491 files, 3.5M)'
-cask '==> Creating Caskroom at /usr/local/Caskroom'
-cask '==> We'll set permissions properly so we won't need sudo in the future'
+brew 'homebrew/dupes/zlib'
+brew 'homebrew/versions/gnupg21'
+mas 'Clear', id: 504544917
+mas 'Xcode', id: 497799835
+mas 'Boxy', id: 1053031090
+mas '1Password', id: 443987910
+mas 'Filters for Photos', id: 1083965373
+mas 'Screens', id: 446107677
+mas 'Tweetbot', id: 557168941
+mas 'Deliveries', id: 924726344
+mas 'Icon Slate', id: 439697913
+mas 'Sip', id: 507257563
+mas 'MiniPlay', id: 936243210
+mas 'Squash', id: 1152443474
+mas 'Calcbot', id: 931657367
+mas 'Cashew', id: 1126100185
+mas 'Battery Health', id: 490192174
+mas 'Redacted', id: 984968384
+mas 'GIF Brewery 3', id: 1081413713
