--- a/home/.atom/storage/application.json
+++ b/home/.atom/storage/application.json
@@ -1,1 +1,1 @@
-[{"initialPaths":["/Users/logansmcansh/Downloads/Jade-and-Stylus-Email-Templates-master"]},{"initialPaths":["/Users/logansmcansh/.homesick/repos/dotfiles","/Users/logansmcansh"]}]
+[{"initialPaths":["/Users/logansmcansh/Downloads/Jade-and-Stylus-Email-Templates-master"]}]
