--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,7 +1,8 @@
 [filter "lfs"]
-	clean = git-lfs clean %f
-	smudge = git-lfs smudge %f
 	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
 [user]
 	name = Logan McAnsh
 	email = logan@mcan.sh
