disable vscode's default color highligher

--- a/settings.json
+++ b/settings.json
@@ -24,5 +24,6 @@
     ],
     "color-highlight.markerType": "dot-after",
     "color-highlight.matchWords": true,
-    "git.enableCommitSigning": true
+    "git.enableCommitSigning": true,
+    "editor.colorDecorators": false
 }
