update vscode config

--- a/settings.json
+++ b/settings.json
@@ -1,29 +1,45 @@
 {
-    "editor.fontSize": 16,
-    "editor.fontFamily": "Operator Mono, Menlo, Monaco, 'Courier New', monospace",
-    "editor.fontWeight": "400",
-    "editor.tabSize": 2,
-    "editor.cursorBlinking": "solid",
-    "editor.cursorStyle": "line",
-    "editor.wordWrap": "on",
-    "editor.multiCursorModifier": "ctrlCmd",
-    "files.trimTrailingWhitespace": true,
-    "files.insertFinalNewline": true,
-    "html.format.indentInnerHtml": true,
-    "terminal.explorerKind": "external",
-    "terminal.external.osxExec": "Hyper.app",
-    "workbench.activityBar.visible": true,
-    "atomKeymap.promptV3Features": true,
-    "editor.formatOnPaste": true,
-    "workbench.statusBar.visible": true,
-    "workbench.startupEditor": "none",
-    "workbench.colorTheme": "Cobalt2",
-    "eslint.autoFixOnSave": true,
-    "vscode_custom_css.imports": [
-        "/Volumes/Macintosh SSD/Users/logansmcansh/.vscodestyles.css"
-    ],
-    "color-highlight.markerType": "dot-after",
-    "color-highlight.matchWords": true,
-    "git.enableCommitSigning": true,
-    "editor.colorDecorators": false
+  "editor.fontSize": 16,
+  "editor.fontFamily": "Operator Mono, Menlo, Monaco, 'Courier New', monospace",
+  "editor.fontWeight": "400",
+  "editor.tabSize": 2,
+  "editor.cursorBlinking": "solid",
+  "editor.cursorStyle": "line",
+  "editor.wordWrap": "on",
+  "editor.multiCursorModifier": "ctrlCmd",
+  "files.trimTrailingWhitespace": true,
+  "files.insertFinalNewline": true,
+  "html.format.indentInnerHtml": true,
+  "terminal.explorerKind": "external",
+  "terminal.external.osxExec": "Hyper.app",
+  "workbench.activityBar.visible": true,
+  "atomKeymap.promptV3Features": true,
+  "editor.formatOnPaste": true,
+  "workbench.statusBar.visible": true,
+  "workbench.startupEditor": "none",
+  "workbench.colorTheme": "Cobalt2",
+  "eslint.autoFixOnSave": true,
+  "editor.formatOnSave": true,
+  "eslint.options": {
+    "configFile": "/Volumes/Macintosh SSD/Users/logansmcansh/.eslintrc.js"
+  },
+  "vscode_custom_css.imports": [
+    "/Volumes/Macintosh SSD/Users/logansmcansh/.vscodestyles.css"
+  ],
+  "color-highlight.markerType": "dot-after",
+  "color-highlight.matchWords": true,
+  "git.enableCommitSigning": true,
+  "editor.colorDecorators": false,
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/.next": true,
+    "**/node_modules": true
+  },
+  "prettier.eslintIntegration": true,
+  "prettier.trailingComma": "all",
+  "terminal.integrated.fontSize": 14
 }
