sort vs code config

--- a/code/settings.json
+++ b/code/settings.json
@@ -1,55 +1,57 @@
 {
-  "editor.fontSize": 13,
-  "editor.fontFamily": "Operator Mono, Menlo, Monaco, 'Courier New', monospace",
-  "editor.fontWeight": "400",
-  "editor.tabSize": 2,
-  "editor.cursorBlinking": "solid",
-  "editor.cursorStyle": "line",
-  "editor.wordWrap": "on",
-  "editor.multiCursorModifier": "ctrlCmd",
-  "files.trimTrailingWhitespace": true,
-  "files.insertFinalNewline": true,
-  "html.format.indentInnerHtml": true,
-  "terminal.explorerKind": "external",
-  "terminal.external.osxExec": "Hyper.app",
-  "workbench.activityBar.visible": true,
-  "atomKeymap.promptV3Features": true,
-  "editor.formatOnPaste": true,
-  "workbench.statusBar.visible": true,
-  "workbench.startupEditor": "none",
-  "workbench.colorTheme": "Cobalt2",
-  "eslint.autoFixOnSave": true,
-  "editor.formatOnSave": true,
   "[javascript]": {
     "editor.formatOnSave": false
   },
-  "vscode_custom_css.imports": [
-    "/Volumes/Macintosh SSD/Users/loganmcansh/.vscodestyles.css"
-  ],
+  "atomKeymap.promptV3Features": true,
   "color-highlight.markerType": "dot-after",
   "color-highlight.matchWords": true,
-  "git.enableCommitSigning": true,
   "editor.colorDecorators": false,
-  "files.exclude": {
-    "**/.git": true,
-    "**/.svn": true,
-    "**/.hg": true,
-    "**/CVS": true,
-    "**/.DS_Store": true,
-    "**/.next": true,
-    "**/node_modules": true
-  },
-  "terminal.integrated.fontSize": 14,
-  "window.zoomLevel": 0,
-  "window.title": "${dirty} ${activeEditorMedium}${separator}${rootName}",
-  "workbench.editor.tabSizing": "shrink",
-  "eslint.alwaysShowStatus": true,
-  "extensions.ignoreRecommendations": false,
-  "workbench.editor.tabCloseButton": "off",
+  "editor.cursorBlinking": "solid",
+  "editor.cursorStyle": "line",
+  "editor.fontFamily": "Operator Mono, Menlo, Monaco, 'Courier New', monospace",
+  "editor.fontSize": 15,
+  "editor.fontWeight": "400",
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": true,
+  "editor.multiCursorModifier": "ctrlCmd",
+  "editor.snippetSuggestions": "top",
+  "editor.tabSize": 2,
+  "editor.wordWrap": "on",
   "emmet.includeLanguages": {
     "javascript": "javascriptreact"
   },
-  "editor.snippetSuggestions": "top",
+  "eslint.alwaysShowStatus": true,
+  "eslint.autoFixOnSave": true,
+  "eslint.packageManager": "yarn",
+  "extensions.ignoreRecommendations": false,
+  "files.exclude": {
+    "**/.DS_Store": true,
+    "**/.git": true,
+    "**/.hg": true,
+    "**/.next": true,
+    "**/.svn": true,
+    "**/CVS": true,
+    "**/node_modules": true
+  },
+  "files.insertFinalNewline": true,
+  "files.trimTrailingWhitespace": true,
+  "git.enableCommitSigning": true,
+  "html.format.indentInnerHtml": true,
   "javascript.format.enable": false,
-  "eslint.packageManager": "yarn"
+  "terminal.explorerKind": "external",
+  "terminal.external.osxExec": "Hyper.app",
+  "terminal.integrated.fontSize": 14,
+  "vscode_custom_css.imports": [
+    "/Volumes/Macintosh SSD/Users/loganmcansh/.vscodestyles.css"
+  ],
+  "window.title": "${dirty} ${activeEditorMedium}${separator}${rootName}",
+  "window.zoomLevel": -1,
+  "workbench.activityBar.visible": true,
+  "workbench.colorTheme": "Level Up",
+  "workbench.editor.enablePreviewFromQuickOpen": false,
+  "workbench.editor.tabCloseButton": "off",
+  "workbench.editor.tabSizing": "shrink",
+  "workbench.sideBar.location": "left",
+  "workbench.startupEditor": "none",
+  "workbench.statusBar.visible": true
 }
