close button on right side
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/code/settings.json
+++ b/code/settings.json
@@ -9,7 +9,7 @@
   "editor.cursorBlinking": "solid",
   "editor.cursorStyle": "line",
   "editor.fontFamily": "Operator Mono, Menlo, Monaco, 'Courier New', monospace",
-  "editor.fontSize": 15,
+  "editor.fontSize": 16,
   "editor.fontWeight": "400",
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
@@ -49,7 +49,7 @@
   "workbench.activityBar.visible": true,
   "workbench.colorTheme": "Level Up",
   "workbench.editor.enablePreviewFromQuickOpen": false,
-  "workbench.editor.tabCloseButton": "off",
+  "workbench.editor.tabCloseButton": "right",
   "workbench.editor.tabSizing": "shrink",
   "workbench.sideBar.location": "left",
   "workbench.startupEditor": "none",
