--- a/code/settings.json
+++ b/code/settings.json
@@ -1,57 +1,62 @@
 {
-  "[javascript]": {
-    "editor.formatOnSave": false
-  },
-  "atomKeymap.promptV3Features": true,
-  "color-highlight.markerType": "dot-after",
-  "color-highlight.matchWords": true,
-  "editor.colorDecorators": false,
-  "editor.cursorBlinking": "solid",
-  "editor.cursorStyle": "line",
+  "window.zoomLevel": -1,
   "editor.fontFamily": "Operator Mono, Menlo, Monaco, 'Courier New', monospace",
   "editor.fontSize": 16,
-  "editor.fontWeight": "400",
-  "editor.formatOnPaste": true,
-  "editor.formatOnSave": true,
-  "editor.multiCursorModifier": "ctrlCmd",
-  "editor.snippetSuggestions": "top",
+  "editor.letterSpacing": 0.5,
+  "workbench.editor.tabSizing": "shrink",
+  "html.format.enable": true,
+  "html.format.preserveNewLines": true,
+  "files.trimTrailingWhitespace": true,
   "editor.tabSize": 2,
+  "editor.cursorStyle": "line",
   "editor.wordWrap": "on",
+  "editor.multiCursorModifier": "ctrlCmd",
+  "editor.fontWeight": "400",
+  "editor.cursorBlinking": "solid",
+  "editor.colorDecorators": false,
+  "editor.minimap.enabled": true,
+  "vscode_custom_css.imports": [
+    "/Volumes/Macintosh SSD/Users/loganmcansh/.vscodestyles.css"
+  ],
+  "workbench.activityBar.visible": true,
+  "workbench.sideBar.location": "left",
+  "editor.minimap.showSlider": "always",
+  "workbench.startupEditor": "newUntitledFile",
+  "extensions.ignoreRecommendations": false,
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/.next": true,
+    "**/node_modules": true
+  },
+  "workbench.colorTheme": "Cobalt2",
+  "workbench.editor.tabCloseButton": "right",
   "emmet.includeLanguages": {
     "javascript": "javascriptreact"
+  },
+  "editor.snippetSuggestions": "top",
+  "workbench.editor.enablePreviewFromQuickOpen": false,
+  "window.title": "${dirty} ${activeEditorMedium}${separator}${rootName}",
+  "atomKeymap.promptV3Features": true,
+  "editor.formatOnSave": true,
+  "[javascript]": {
+    "editor.formatOnSave": false
   },
   "eslint.alwaysShowStatus": true,
   "eslint.autoFixOnSave": true,
   "eslint.packageManager": "yarn",
-  "extensions.ignoreRecommendations": false,
-  "files.exclude": {
-    "**/.DS_Store": true,
-    "**/.git": true,
-    "**/.hg": true,
-    "**/.next": true,
-    "**/.svn": true,
-    "**/CVS": true,
-    "**/node_modules": true
-  },
+  "color-highlight.markerType": "dot-after",
+  "color-highlight.matchWords": true,
   "files.insertFinalNewline": true,
-  "files.trimTrailingWhitespace": true,
   "git.enableCommitSigning": true,
   "html.format.indentInnerHtml": true,
   "javascript.format.enable": false,
   "terminal.explorerKind": "external",
   "terminal.external.osxExec": "Hyper.app",
   "terminal.integrated.fontSize": 14,
-  "vscode_custom_css.imports": [
-    "/Volumes/Macintosh SSD/Users/loganmcansh/.vscodestyles.css"
-  ],
-  "window.title": "${dirty} ${activeEditorMedium}${separator}${rootName}",
-  "window.zoomLevel": -1,
-  "workbench.activityBar.visible": true,
-  "workbench.colorTheme": "Level Up",
-  "workbench.editor.enablePreviewFromQuickOpen": false,
-  "workbench.editor.tabCloseButton": "right",
-  "workbench.editor.tabSizing": "shrink",
-  "workbench.sideBar.location": "left",
-  "workbench.startupEditor": "none",
-  "workbench.statusBar.visible": true
+  "workbench.statusBar.visible": true,
+  "workbench.statusBar.feedback.visible": false,
 }
