--- a/code/settings.json
+++ b/code/settings.json
@@ -1,7 +1,7 @@
 {
   "window.zoomLevel": -1,
   "editor.fontFamily": "Operator Mono, Menlo, Monaco, 'Courier New', monospace",
-  "editor.fontSize": 17,
+  "editor.fontSize": 20,
   "editor.letterSpacing": 0.5,
   "workbench.editor.tabSizing": "shrink",
   "html.format.enable": true,
@@ -56,4 +56,5 @@
   "terminal.integrated.fontSize": 14,
   "workbench.statusBar.visible": true,
   "workbench.statusBar.feedback.visible": false,
+  "editor.fontLigatures": true
 }
