--- a/code/settings.json
+++ b/code/settings.json
@@ -15,7 +15,7 @@
   "editor.cursorBlinking": "solid",
   "editor.colorDecorators": false,
   "editor.minimap.enabled": true,
-  "workbench.activityBar.visible": true,
+  "workbench.activityBar.visible": false,
   "workbench.sideBar.location": "left",
   "editor.minimap.showSlider": "always",
   "workbench.startupEditor": "newUntitledFile",
@@ -57,5 +57,6 @@
   "workbench.statusBar.visible": true,
   "workbench.statusBar.feedback.visible": false,
   "editor.fontLigatures": true,
-  "terminal.integrated.rendererType": "dom"
+  "terminal.integrated.rendererType": "dom",
+  "terminal.integrated.shell.osx": "zsh"
 }
